crates/nirvash-macros/tests/fixtures/code_tests_legacy_action.stderr
error: action = ... is no longer supported; use binding = ... and implement ProtocolRuntimeBinding<Spec>
   --> tests/fixtures/code_tests_legacy_action.rs:118:68
    |
118 | #[code_tests(spec = Spec, binding = Binding, init = initial_state, action = Action)]
    |                                                                    ^^^^^^
